Fixed Profile Name Text Align Issue

--- a/src/pages/about_page/team_profiles/team_section/profile/profile.css
+++ b/src/pages/about_page/team_profiles/team_section/profile/profile.css
@@ -109,10 +109,16 @@
 }
 
 .pm-container main > header {
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: flex-start;
+}
+
+.pm-container main > header h4 {
+  width: 100%;
+  text-align: center;
 }
 
 .pm-container main > main {
